<resources>
    <string name="app_name">My_Movies</string>
    <string name="id">Movie ID</string>
    <string name="title">Movie Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="pg">Show All PG-13 Movies</string>
    <string-array name="spinnerRating">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>